# ExtendedCpp

./: CMakeLists.txt  CMakePresets.json  Doxyfile  LogConfig.xml  README.md  baseline.json  extendedcpp.json  vcpkg.json
.github/workflows/: static.yml
benchmarks/Common/: CMakeLists.txt  MatrixBenchmark.cpp  benchmark.txt
benchmarks/LINQ/: CMakeLists.txt  SortDoubleBenchmarks.cpp  SortIntBenchmarks.cpp  SortStringBenchmarks.cpp  benchmarks.txt
cmake/: ExtendedCpp-config.cmake.in  extendedcpp-config.cmake  extendedcpp-config.cmake.in  utils.cmake
extendedcpp/: portfile.cmake  vcpkg.json
include/Common/: CancellationToken.h  CancellationTokenSource.h  Common.h  Concepts.h  ErrorCode.h  ErrorInfo.h  ErrorTrace.h  Matrix.h  Random.h
include/DI/: Concepts.h  DI.h  Injector.h  LifeTime.h  Register.h  ServiceProvider.h
include/Events/: ConstMethodHandler.h  Event.h  Events.h  FunctionHandler.h  IEventHandler.h  MethodHandler.h  StaticMethodHandler.h
include/ExtendedCpp/: Asio.h  Cancellation.h  Channel.h  Common.hpp  Concepts.h  DI.h  Events.h  InfoLog.h  Json.h  LINQ.h  Matrix.h  Random.h  Reflection.h  Reflection.hpp  Task.h  Xml.h
include/ExtendedCpp/Asio/: Afstream.h  Aifstream.h  Aio.h  Aistream.h  Aofstream.h  Aostream.h  Astream.h
include/ExtendedCpp/Cancellation/: CancellationToken.h  CancellationTokenSource.h
include/ExtendedCpp/Common/: CancellationToken.hpp  Matrix.hpp  Random.hpp
include/ExtendedCpp/DI/: Concepts.h  Injector.h  LifeTime.h  Register.h  ServiceProvider.h
include/ExtendedCpp/Events/: ConstMethodHandler.h  Event.h  FunctionHandler.h  IEventHandler.h  MethodHandler.h  StaticMethodHandler.h
include/ExtendedCpp/InfoLog/: Concepts.h  Configuration.h  ConsoleSender.h  Converter.h  FileSender.h  ISender.h  LogLevel.h  Logger.h  LoggerFactory.h  Parser.h
include/ExtendedCpp/Json/: Concepts.h  JsonMacros.h
include/ExtendedCpp/LINQ/: Aggregate.h  Algorithm.h  Concepts.h  Future.h  Iterators.h  LinqContainer.h  LinqGenerator.h  LinqView.h  OrderType.h  Sort.h  TypeTraits.h  YieldForeach.h
include/ExtendedCpp/Reflection/: Assembly.h  CollectionFieldInfo.h  Concepts.h  ConstructorInfo.h  ConstructorInfo.hpp  FieldInfo.h  FieldInfo.hpp  MemberInfo.h  MemberType.h  MethodInfo.h  MethodInfo.hpp  StaticFieldInfo.h  StaticFieldInfo.hpp  StaticMethodInfo.h  StaticMethodInfo.hpp  TypeInfo.h  TypeInfo.hpp  TypeTraits.h
include/ExtendedCpp/Xml/: pugixml.hpp
include/InfoLog/: CInfoLog.h  Concepts.h  Configuration.h  ConsoleSender.h  Converter.h  FileSender.h  ISender.h  LogLevel.h  Logger.h  LoggerFactory.h  Parser.h
include/Json/: Json.h  JsonMacros.h
include/LINQ/: Aggregate.h  Algorithm.h  Concepts.h  Future.h  LINQ.h  LinqContainer.h  LinqGenerator.h  OrderType.h  Sort.h  TypeTraits.h  YieldForeach.h
include/Reflection/: Assembly.h  Concepts.h  ConstructorInfo.h  FieldInfo.h  MemberInfo.h  MemberType.h  MethodInfo.h  MethodTraits.h  Reflection.h  StaticFieldInfo.h  StaticMethodInfo.h  TypeInfo.h  TypeTraits.h
include/Xml/: Xml.h  pugixml.hpp
modules/Common/: CancellationToken.cppm  CancellationTokenSource.cppm  Concepts.cppm  Matrix.cppm  Random.cppm
modules/Reflection/: Assembly.cppm  Concepts.cppm  ConstructorInfo.cppm  FieldInfo.cppm  MemberInfo.cppm  MemberType.cppm  MethodInfo.cppm  Reflection.cppm  StaticFieldInfo.cppm  StaticMethodInfo.cppm  TypeInfo.cppm
portfiles/: extendedcpp.json  portfile.cmake  vcpkg.json
src/Asio/: Asio.cpp
src/Cancellation/: CancellationToken.cpp  CancellationTokenSource.cpp
src/Common/: CancellationToken.cpp  CancellationTokenSource.cpp  ErrorInfo.cpp  ErrorTrace.cpp  Random.cpp
src/DI/: ServiceProvider.cpp
src/Events/: Events.cpp
src/InfoLog/: Configuration.cpp  ConsoleSender.cpp  FileSender.cpp  ISender.cpp  Logger.cpp  LoggerFactory.cpp  Parser.cpp
src/Json/: Json.cpp
src/LINQ/: LINQ.cpp
src/Reflection/: Assembly.cpp  CollectionFieldInfo.cpp  ConstructorInfo.cpp  FieldInfo.cpp  MemberInfo.cpp  MethodInfo.cpp  Reflection.cpp  StaticFieldInfo.cpp  StaticMethodInfo.cpp  TypeInfo.cpp
src/Xml/: pugixml.cpp
tests/Asio/: AsioTests.cpp  CMakeLists.txt
tests/Common/: CMakeLists.txt  ChannelTests.cpp  MatrixTests.cpp  RandomTests.cpp
tests/DI/: CMakeLists.txt  DI_Tests.cpp  IService.h  IService2.h  Service.h  Service2.h  Target.cpp  Target.h  Target2.h
tests/Events/: CMakeLists.txt  Events_Tests.cpp  Events_Tests.h
tests/InfoLog/: CMakeLists.txt  LogConfig.xml  ParserTests.cpp  SenderTests.cpp  TestSender.cpp  TestSender.h
tests/Json/: CMakeLists.txt  Json_Tests.cpp  ObjectObject.h  ObjectsObject.h  ValueObject.h  ValuesObject.h
tests/LINQ/: AlgorithmTests.cpp  CMakeLists.txt  LINQ_Generator_Tests.cpp  LINQ_Tests.cpp  LINQ_Tests.h  LINQ_View_Tests.cpp  SortTests.cpp
tests/Reflection/: CMakeLists.txt  ReflectionTests.cpp  TestStruct.cpp  TestStruct.h  TestTemplate.h
